--- a/app/src/main/res/layout/activity_listen.xml
+++ b/app/src/main/res/layout/activity_listen.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="17dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="42dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/floatingActionButton2"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/textViewDescription"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -38,34 +38,35 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar"
-        app:layout_constraintVertical_bias="0.502"
+        app:layout_constraintVertical_bias="0.504"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
-
 
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="77dp"
         android:layout_height="77dp"
-        android:layout_marginStart="8dp"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_media_play"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="77dp"
         android:layout_height="77dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         android:visibility="invisible"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_media_pause"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp"
+        app:fabSize="normal"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_pause" />
 </android.support.constraint.ConstraintLayout>
